<resources>
    <string name="app_name">smart_refrigirator</string>
    <string name="initialdetails">initial details</string>
    <string name="viewdetails">View Details</string>
    <string name="addfood">Add Food</string>
    <string name="deletefood">Detete Food</string>
    <string name="changefood">Change Food</string>
    <string name="Food_name">Name</string>
    <string name="Food_exp">Expiry Date</string>
    <string name="tray1">tray 1</string>
    <string name="tray2">tray 2</string>
    <string name="tray3">tray 3</string>
    <string name="tray4">tray 4</string>
</resources>