<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/initialdetails"
        android:layout_width="337dp"
        android:layout_height="265dp"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/addfood"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_marginStart="20dp"
        android:hint="@string/addfood"
        android:onClick="clickbuttionadd"
        app:layout_constraintBaseline_toBaselineOf="@+id/changefood"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changefood"
        android:layout_width="156dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/changefood"
        app:layout_constraintBottom_toTopOf="@+id/viewdetails"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deletefood"
        android:layout_width="144dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:hint="@string/deletefood"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewdetails"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewdetails"
        android:layout_width="150dp"
        android:layout_height="73dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="150dp"
        android:hint="@string/viewdetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>