<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abcd"
    tools:context=".viewfoodactivity">

    <Button
        android:id="@+id/tray2"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/tray2"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tray3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tray1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/tray1"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/tray1"
        android:textColor="#F8F4F4"
        android:textColorHighlight="#F8F5F5"
        android:textColorHint="#F1EFEF"
        android:textColorLink="#F6F0F0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tray4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253" />

    <Button
        android:id="@+id/tray3"
        android:layout_width="207dp"
        android:layout_height="67dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="440dp"
        android:hint="@string/tray3"
        android:textColor="#F1F0F0"
        android:textColorHint="#F8F5F5"
        android:textColorLink="#F1ECEC"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tray4"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="348dp"
        android:hint="@string/tray4"
        android:textColorHint="#F1ECEC"
        android:textColorLink="#F3F2F2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>